--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,9 +7,30 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
+
+    <script src="~/Scripts/multiLanguage/angular.js"></script>
+    <script src="~/Scripts/multiLanguage/angular-cookies.js"></script>
+    <script src="~/Scripts/multiLanguage/angular-translate.min.js"></script>
+    <script src="~/Scripts/multiLanguage/angular-translate-storage-cookie.js"></script>
+    <script src="~/Scripts/multiLanguage/angular-translate-loader-static-files.js"></script>
+
+    <!-- DatePiker -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
+    <!--<script src="~/Scripts/angular-locale_ja-jp.js"></script>-->
+    <script src="~/TestJS/jyuuCyu.js"></script>
+
+
+    <!-- Material Design icon font -->
+    <link rel="stylesheet" href="~/TestJS/MD/material.min.css" />
+    <script src="~/TestJS/MD/material.min.js"></script>
+    <!--Check later-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+<body ng-app="myApp2">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="display:none">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -24,12 +45,13 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="left:0; top:0; position:absolute; width:100%; height: 100%">
         @RenderBody()
         <hr />
         <footer>
