--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
     <script src="~/TestJS/jyuuCyu.js"></script>
 
 
+    <!-- Jquery Datetime
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"> </script>    -->
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+     
+
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="~/TestJS/MD/material.min.css" />
     <script src="~/TestJS/MD/material.min.js"></script>
